--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,4 +13,44 @@
 }
 .content {
   grid-area: content;
+  padding: 0 30px;
+}
+
+@media (max-width: 1000px) {
+  .wrapper {
+    grid-template-rows: 100px 1fr;
+    grid-template-columns: 50px 1fr;
+    grid-template-areas:
+    "header header"
+    "drawer content";
+  }
+  .wrapper .navbar {
+    display: none;
+  }
+}
+
+@media (max-width: 450px) {
+  .wrapper {
+    grid-template-rows: 100px 1fr;
+    grid-template-columns: 50px 300px;
+  }
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+
+  }
+}
+
+@media (max-width: 390px) {
+  .wrapper {
+    grid-template-columns: 50px 250px;
+  }
+}
+
+@media (max-width: 350px) {
+  .wrapper {
+    grid-template-columns: 50px 240px;
+  }
 }
