--- a/src/pages/MyShoppingLists/MyShoppingLists.module.css
+++ b/src/pages/MyShoppingLists/MyShoppingLists.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+  width: 100%;
+}
+
 .siteCardBorderLessWrapper {
   padding: 30px;
   box-sizing: border-box;
@@ -5,4 +9,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+
+@media (max-width: 800px) {
+  .siteCardBorderLessWrapper {
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+
 }
