--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,7 +19,7 @@
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 2fr;
   grid-gap: 10px;
-  align-items: center;
+  align-items: baseline;
 }
 .text {
   color: #f5f5f7;
